--- a/suite-native/app/package.json
+++ b/suite-native/app/package.json
@@ -87,6 +87,7 @@
         "react": "18.2.0",
         "react-intl": "^6.6.2",
         "react-native": "0.73.2",
+        "react-native-ble-plx": "^3.1.2",
         "react-native-flipper": "^0.212.0",
         "react-native-gesture-handler": "2.15.0",
         "react-native-keyboard-aware-scroll-view": "0.9.5",
