--- a/packages/connect-explorer-theme/package.json
+++ b/packages/connect-explorer-theme/package.json
@@ -36,6 +36,8 @@
     "dependencies": {
         "@headlessui/react": "^1.7.17",
         "@popperjs/core": "^2.11.8",
+        "@trezor/components": "workspace:*",
+        "@vitejs/plugin-react": "^3.0.1",
         "clsx": "^2.0.0",
         "escape-string-regexp": "^5.0.0",
         "flexsearch": "^0.7.31",
@@ -46,6 +48,8 @@
         "next-seo": "^6.0.0",
         "next-themes": "^0.2.1",
         "scroll-into-view-if-needed": "^3.1.0",
+        "styled-components": "^5.3.10",
+        "tailwindcss": "^3.3.3",
         "tsup": "^8.0.2",
         "zod": "^3.22.3"
     },
@@ -56,7 +60,6 @@
         "@types/git-url-parse": "^9.0.1",
         "@types/react": "^18.2.21",
         "@types/react-dom": "^18.2.7",
-        "@vitejs/plugin-react": "^3.0.1",
         "concurrently": "^8.0.0",
         "jsdom": "^23.0.0",
         "next": "^13.5.6",
@@ -67,7 +70,6 @@
         "postcss-lightningcss": "^1.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "tailwindcss": "^3.3.3",
         "vitest": "^0.34.0"
     },
     "sideEffects": [
