--- a/.github/workflows/mobile-e2e-ios.yml
+++ b/.github/workflows/mobile-e2e-ios.yml
@@ -10,6 +10,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: "true"
+      - name: set Xcode version
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '14.3.1'
 
       # - name: Get build hash
       #   id: get_build_hash
