--- a/.github/workflows/mobile-e2e-android.yml
+++ b/.github/workflows/mobile-e2e-android.yml
@@ -1,9 +1,16 @@
 name: "[Test] suite-native Android E2E"
-# on: [push, pull_request]
+on:
+  pull_request:
+    types: [opened, synchronize, labeled, unlabeled]
+  workflow_dispatch:
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  build_test_app:
-    timeout-minutes: 90
+  build_android_test_app:
+    # run action only if the PR has assigned label 'mobile-app'.
+    if: github.event_name == 'workflow_dispatch' || contains(github.event.pull_request.labels.*.name, 'mobile-app')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout project
@@ -11,14 +18,6 @@ jobs:
         with:
           submodules: "true"
 
-      # - name: Get build hash
-      #   id: get_build_hash
-      #   run: echo "build_hash=${{hashFiles('suite-native/app/package.json')}}-${{hashFiles('suite-native/app/app.config.ts')}}" >> $GITHUB_OUTPUT
-
-      # - name: Get build hash
-      #   run: echo "${{steps.get_build_hash.outputs.build_hash}}"
-
-      # TODO: move this to a custom action
       - name: Install node and yarn
         uses: actions/setup-node@v4
         with:
@@ -29,11 +28,10 @@ jobs:
         uses: actions/cache@v4
         with:
           path: node_modules
-          key: node_modules-${{hashFiles('yarn.lock')}}
-          restore-keys: node_modules- # Take any latest cache if failed to find it for current yarn.lock
+          key: node_modules-${{ github.ref }}
 
       - name: Install Yarn dependencies
-        run: yarn install && yarn build:libs
+        run: yarn install
 
       - name: Setup Java
         uses: actions/setup-java@v3
@@ -41,9 +39,13 @@ jobs:
           distribution: temurin
           java-version: 17
 
+      - name: Sign message system config
+        working-directory: ./suite-common/message-system
+        run: yarn sign-config
+
       - name: Prebuild native expo project
         working-directory: ./suite-native/app
-        run: yarn prebuild
+        run: yarn prebuild --platform android --clean
 
       - name: Detox build
         run: yarn build:e2e android.emu.release
@@ -54,16 +56,28 @@ jobs:
         with:
           path: |
             suite-native/app/android/app/build/
-          key: android_test_build
+          key: android_test_build-${{ github.ref }}
 
   run_android_e2e_tests:
     runs-on: ubuntu-latest
-    needs: build_test_app
+    needs: build_android_test_app
     steps:
       - name: Checkout project
         uses: actions/checkout@v4
         with:
           submodules: "true"
+
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          # Combination of android emulator and trezor-user-env is using a too much disk space
+          # of a free tier GH action runner, some preinstalled packages have to be removed.
+          dotnet: true
+          haskell: true
+          tool-cache: false
+          android: false
+          swap-storage: false
+          large-packages: false
 
       - name: Install node and yarn
         uses: actions/setup-node@v4
@@ -75,28 +89,36 @@ jobs:
         uses: actions/cache@v4
         with:
           path: node_modules
-          key: node_modules-${{hashFiles('yarn.lock')}}
-          restore-keys: node_modules- # Take any latest cache if failed to find it for current yarn.lock
+          key: node_modules-${{ github.ref }}
 
       - name: Get device name from detox config file
         id: device
         run: node -e "console.log('AVD_NAME=' + require('./suite-native/app/.detoxrc').devices.emulator.device.avdName)" >> $GITHUB_OUTPUT
 
-      - name: Enable KVM
+      - name: Run trezor-user-env
+        env:
+          COMPOSE_FILE: ./docker/docker-compose.suite-native-ci.yml
         run: |
-          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
-          sudo udevadm control --reload-rules
-          sudo udevadm trigger --name-match=kvm
+          docker compose pull trezor-user-env-unix
+          docker compose up -d --wait trezor-user-env-unix
 
       - name: read build from cache
         uses: actions/cache/restore@v4
         with:
           path: |
             suite-native/app/android/app/build/
-          key: android_test_build
+          key: android_test_build-${{ github.ref }}
+
+      - name: Enable Android emulator KVM optimalization
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
 
       - name: Run Detox E2E Android tests
         uses: reactivecircus/android-emulator-runner@v2
+        env:
+          RUNNER_TEMP: /tmp
         with:
           api-level: 31
           profile: pixel_3a
@@ -105,11 +127,12 @@ jobs:
           ram-size: 4096M
           force-avd-creation: true
           avd-name: ${{ steps.device.outputs.AVD_NAME }}
-          pre-emulator-launch-script: avdmanager list device
-          script: yarn test:e2e android.emu.release --headless --retries 3 --take-screenshots failing  --debug-synchronization 3000
+          emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim -grpc 8554
+          # script: sleep infinity
+          script: yarn test:e2e android.emu.release --headless --take-screenshots failing --record-videos failing --retries 3
 
       - name: "Store failed test screenshot artifacts"
-        if: ${{ failure() }}
+        if: ${{failure()}}
         uses: actions/upload-artifact@v4
         with:
           name: failed-android-tests-screenshots
