--- a/packages/connect-explorer-theme/package.json
+++ b/packages/connect-explorer-theme/package.json
@@ -1,6 +1,9 @@
 {
     "name": "@trezor/connect-explorer-theme",
     "version": "2.13.4",
+    "description": "A Nextra theme for documentation sites (https://github.com/shuding/nextra/tree/main/packages/nextra-theme-docs).",
+    "author": "Shu Ding <g@shud.in>",
+    "license": "MIT",
     "private": true,
     "exports": {
         "./style.css": "./style.css",
@@ -48,7 +51,7 @@
         "next-seo": "^6.0.0",
         "next-themes": "^0.2.1",
         "scroll-into-view-if-needed": "^3.1.0",
-        "styled-components": "^5.3.10",
+        "styled-components": "^6.1.8",
         "tailwindcss": "^3.3.3",
         "tsup": "^8.0.2",
         "zod": "^3.22.3"
