--- a/packages/connect-explorer-nextra/package.json
+++ b/packages/connect-explorer-nextra/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "dev": "next",
         "build": "next build && rm -rf build && mv out build",
+        "build:webextension": "BUILD_TARGET=webextension yarn build && yarn g:rimraf build-webextension && TS_NODE_PROJECT=\"tsconfig.json\" yarn webpack --config ./webpack/webextension.webpack.config.ts && bash ./webpack/replace-next-filenames.sh",
         "start": "next start",
         "lint:js": "yarn g:eslint '**/*{.ts,.tsx}'",
         "lint:styles": "npx stylelint './src/**/*{.ts,.tsx}' --cache --config ../../.stylelintrc",
@@ -15,8 +16,11 @@
         "@sinclair/typebox": "^0.31.28",
         "@trezor/components": "workspace:^",
         "@trezor/connect-web": "workspace:^",
+        "@trezor/connect-webextension": "workspace:^",
         "@trezor/protobuf": "workspace:^",
         "@trezor/utils": "workspace:^",
+        "copy-webpack-plugin": "^12.0.2",
+        "html-webpack-plugin": "^5.6.0",
         "next": "^14.1.1",
         "nextra": "^2.13.4",
         "nextra-theme-docs": "^2.13.4",
@@ -28,7 +32,9 @@
         "redux": "^4.2.1",
         "redux-logger": "^3.0.6",
         "redux-thunk": "^2.4.2",
-        "styled-components": "^6.1.8"
+        "styled-components": "^6.1.8",
+        "webpack": "^5.90.1",
+        "webpack-cli": "^5.1.4"
     },
     "devDependencies": {
         "@types/redux-logger": "^3.0.11"
