--- a/packages/connect-explorer-nextra/package.json
+++ b/packages/connect-explorer-nextra/package.json
@@ -19,6 +19,7 @@
         "@trezor/connect-webextension": "workspace:^",
         "@trezor/protobuf": "workspace:^",
         "@trezor/utils": "workspace:^",
+        "babel-plugin-styled-components": "^2.1.4",
         "copy-webpack-plugin": "^12.0.2",
         "html-webpack-plugin": "^5.6.0",
         "next": "^14.1.1",
