--- a/packages/connect-explorer-theme/package.json
+++ b/packages/connect-explorer-theme/package.json
@@ -5,29 +5,15 @@
     "author": "Shu Ding <g@shud.in>",
     "license": "MIT",
     "private": true,
-    "exports": {
-        "./style.css": "./style.css",
-        ".": {
-            "import": "./dist/index.js",
-            "types": "./dist/index.d.mts"
-        }
-    },
-    "types": "./dist/index.d.mts",
-    "files": [
-        "dist",
-        "style.css"
-    ],
+    "main": "src/index.tsx",
     "scripts": {
-        "build": "tsup",
-        "build:all": "yarn build && yarn build:tailwind",
+        "build:all": "yarn build:tailwind",
         "build:tailwind": "yarn postcss css/styles.css -o style.css --verbose",
-        "clean": "rimraf ./dist ./style.css",
-        "dev": "concurrently \"yarn dev:layout\" \"yarn dev:tailwind\"",
-        "dev:layout": "tsup --watch",
+        "clean": "rimraf ./style.css",
+        "dev": "concurrently \"yarn dev:tailwind\"",
         "dev:tailwind": "TAILWIND_MODE=watch yarn postcss css/styles.css -o style.css --watch",
         "prepublishOnly": "yarn build:all",
-        "types": "tsup --dts-only",
-        "types:check": "tsc --noEmit",
+        "type-check": "yarn g:tsc --build tsconfig.json",
         "postinstall": "yarn build:all"
     },
     "peerDependencies": {
@@ -53,7 +39,6 @@
         "scroll-into-view-if-needed": "^3.1.0",
         "styled-components": "^6.1.8",
         "tailwindcss": "^3.3.3",
-        "tsup": "^8.0.2",
         "zod": "^3.22.3"
     },
     "devDependencies": {
