--- a/packages/connect-explorer-nextra/package.json
+++ b/packages/connect-explorer-nextra/package.json
@@ -20,11 +20,13 @@
         "@trezor/connect-webextension": "workspace:^",
         "@trezor/protobuf": "workspace:^",
         "@trezor/schema-utils": "workspace:^",
+        "@trezor/theme": "workspace:^",
         "@trezor/utils": "workspace:^",
         "babel-plugin-styled-components": "^2.1.4",
         "copy-webpack-plugin": "^12.0.2",
         "html-webpack-plugin": "^5.6.0",
         "next": "^14.1.1",
+        "next-themes": "^0.2.1",
         "nextra": "^2.13.4",
         "nextra-theme-docs": "^2.13.4",
         "react": "^18.2.0",
