--- a/suite-common/token-definitions/package.json
+++ b/suite-common/token-definitions/package.json
@@ -18,6 +18,7 @@
         "@suite-common/redux-utils": "workspace:*",
         "@suite-common/wallet-config": "workspace:*",
         "@suite-common/wallet-types": "workspace:*",
+        "@trezor/blockchain-link-types": "workspace:^",
         "@trezor/blockchain-link-utils": "workspace:*",
         "@trezor/connect": "workspace:*",
         "@trezor/env-utils": "workspace:*",
