--- a/suite-common/icons/package.json
+++ b/suite-common/icons/package.json
@@ -9,7 +9,8 @@
         "lint:js": "yarn g:eslint '**/*.{ts,tsx,js}'",
         "depcheck": "yarn g:depcheck",
         "type-check": "yarn g:tsc --build",
-        "generate-icons": "yarn g:tsx generateIcons.js"
+        "generate-icons": "yarn g:tsx generateIcons.js",
+        "download-crypto-icons": "yarn g:tsx ./scripts/downloadCryptoIcons.ts"
     },
     "dependencies": {
         "@shopify/react-native-skia": "1.3.2",
@@ -22,6 +23,7 @@
         "react-native": "0.74.1",
         "react-native-reanimated": "3.11.0",
         "react-svg": "^16.1.33",
+        "sharp": "0.32.6",
         "styled-components": "^6.1.8"
     },
     "devDependencies": {
